--- a/ProjWeb2V/.settings/org.eclipse.core.resources.prefs
+++ b/ProjWeb2V/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/CriarProj.jsp=UTF-8
+encoding//src/main/webapp/Index.jsp=UTF-8
 encoding/<project>=UTF-8
